@@ -2,6 +2,7 @@
 
 == HEAD
 
+* Fixed [#6884] intermittent errors related to method binding
 * Fixed [#6870] rspec on edge rails spec:controller fixture loading fails
 * Using obj.inspect for all messages
 * Got rid of instance_exec (just using instance_eval because we never need to pass it args)
